      1102-include-introduce-byte-counting-functions.full.patch
    - 1103-xkb-Don-t-swap-XkbSetGeometry-data-in-the-input-buff.patch =>
      1103-xkb-Don-t-swap-XkbSetGeometry-data-in-the-input.full.patch
    - 1104-xkb-Check-strings-length-against-request-size.patch =>
      1104-xkb-Check-strings-length-against-request-size.full.patch
  * debian/rolltarball.sh:
    - Use more quotes. Fixes potential bugs, including one triggered by an
      unquoted hash within the command line. BASH accepts this. Other shells
      do not (i.e., treat everything following the hash character as a
      comment.)
    - Convert tabs to spaces for consistency.
    - Use more curly braces. Prevents random characters as being treated as
      part of a variable name.
    - Don't escape last newline of a multiline command. Worked out fine so
      far, because the next line was empty, but this can easily change...
  * README.keystrokes:
    Backported from Arctica GH 3.6.x branch.

    - Copy actions documentation from the wiki.
      Affects:
      + 0320_nxagent_configurable-keystrokes.full.patch

  [ Bernard Cafarelli ]
  * nx-X11: link to libdl to fix undefined references to 'dlopen' and 'dlsym'.
    Fixes: #853.
    v2: generally link to libdl in all of nx-X11. (Mike Gabriel)
    Adds:
    - 0630_nx-X11_fix-underlinking-dlopen-dlsym.full.patch

  [ Mike Gabriel ]
  * Security fixes:
    - X.Org CVE-2013-7439:
      1200-CVE-2013-7439-MakeBigReq-don-t-move-the-last-wo.full.patch
  * nx-X11: Prevent underlinking by linking to libNX_X{11,damage,fixes).
    Adds:
    - 0640_nx-X11_fix-underlinking-libNX_Xcomposite_damage_fixes.full.patch
  * nxcompshad: Prevent underlinking by linking to libNX_Xext.
    Adds:
    - 0650_nxcompshad_link-to-NX_Xext.full.patch

 -- X2Go Release Manager <git-admin@x2go.org>  Tue, 17 Mar 2015 19:19:32 +0100

nx-libs (2:3.5.0.31-0x2go1) unstable; urgency=low

  [ Clemens Lang ]
  * Use path discovery for finding makedepend. Remove old cruft. Adds: